--- a/tutorial/html/measures/index.html
+++ b/tutorial/html/measures/index.html
@@ -352,6 +352,21 @@ multi-class problems. If not, the measure can only be used for binary classifica
 <td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/aggregations">test.mean</a></td>
 </tr>
 <tr>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">brier</a> - Brier score</td>
+<td align="left"></td>
+<td align="center">X</td>
+<td align="right">0</td>
+<td align="right">1</td>
+<td align="center"></td>
+<td align="center">X</td>
+<td align="center">X</td>
+<td align="center">X</td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/aggregations">test.mean</a></td>
+</tr>
+<tr>
 <td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">f1</a> - F1 measure</td>
 <td align="left"></td>
 <td align="center"></td>
