--- a/tutorial/html/create_imputation/index.html
+++ b/tutorial/html/create_imputation/index.html
@@ -256,7 +256,7 @@ The <em>learn</em> and <em>impute</em> functions both have at least the followin
 #&gt;     makeImputeMethod(learn = function(data, target, col) mean(data[[col]], 
 #&gt;         na.rm = TRUE), impute = simpleImpute)
 #&gt; }
-#&gt; &lt;bytecode: 0x7fd1f4df8040&gt;
+#&gt; &lt;bytecode: 0x7fa6c5ca2bc0&gt;
 #&gt; &lt;environment: namespace:mlr&gt;
 mlr:::simpleImpute
 #&gt; function (data, target, col, const) 
@@ -270,7 +270,7 @@ mlr:::simpleImpute
 #&gt;     }
 #&gt;     replace(x, is.na(x), const)
 #&gt; }
-#&gt; &lt;bytecode: 0x7fd1f485c430&gt;
+#&gt; &lt;bytecode: 0x7fa6c4a75d10&gt;
 #&gt; &lt;environment: namespace:mlr&gt;
 </code></pre>
 
