--- a/tutorial/html/wrapper/index.html
+++ b/tutorial/html/wrapper/index.html
@@ -275,7 +275,7 @@ print(wrapped.lrn)
 #&gt; Type: classif
 #&gt; Name: ; Short name: 
 #&gt; Class: BaggingWrapper
-#&gt; Properties: twoclass,multiclass,missings,numerics,factors,ordered,prob,weights
+#&gt; Properties: numerics,factors,ordered,missings,weights,prob,twoclass,multiclass
 #&gt; Predict-Type: response
 #&gt; Hyperparameters: xval=0,bw.iters=100,bw.feats=0.5
 </code></pre>
@@ -308,8 +308,8 @@ We can use this newly constructed learner like all base learners, i.e. we can us
 #&gt; [Resample] cross-validation iter: 10
 #&gt; [Resample] Result: mmce.test.mean=0.06
 #&gt;   task.id           learner.id mmce.test.mean
-#&gt; 1    iris        classif.rpart     0.06666667
-#&gt; 2    iris classif.rpart.bagged     0.06000000
+#&gt; 1    iris        classif.rpart        0.06667
+#&gt; 2    iris classif.rpart.bagged        0.06000
 </code></pre>
 
 <p>That far we are quite happy with our new learner.
@@ -346,7 +346,7 @@ print(tuned.lrn)
 #&gt; Type: classif
 #&gt; Name: ; Short name: 
 #&gt; Class: TuneWrapper
-#&gt; Properties: twoclass,multiclass,missings,numerics,factors,ordered,prob,weights
+#&gt; Properties: numerics,factors,ordered,missings,weights,prob,twoclass,multiclass
 #&gt; Predict-Type: response
 #&gt; Hyperparameters: xval=0,bw.iters=100,bw.feats=0.5
 </code></pre>
@@ -367,25 +367,25 @@ print(tuned.lrn)
 #&gt; With control class: TuneControlRandom
 #&gt; Imputation value: 1
 #&gt; [Tune-x] 1: minsplit=5; bw.feats=0.935
-#&gt; [Tune-y] 1: mmce.test.mean=0.0467; time: 7.9 min; memory: 135.2 Mb (+0.0)
+#&gt; [Tune-y] 1: mmce.test.mean=0.0467; time: 8.2 min; memory: 156Mb use, 447Mb max
 #&gt; [Tune-x] 2: minsplit=9; bw.feats=0.675
-#&gt; [Tune-y] 2: mmce.test.mean=0.0467; time: 7.5 min; memory: 135.2 Mb (+0.0)
+#&gt; [Tune-y] 2: mmce.test.mean=0.0467; time: 8.3 min; memory: 156Mb use, 447Mb max
 #&gt; [Tune-x] 3: minsplit=2; bw.feats=0.847
-#&gt; [Tune-y] 3: mmce.test.mean=0.0467; time: 7.6 min; memory: 135.2 Mb (+0.0)
+#&gt; [Tune-y] 3: mmce.test.mean=0.0467; time: 7.9 min; memory: 156Mb use, 447Mb max
 #&gt; [Tune-x] 4: minsplit=4; bw.feats=0.761
-#&gt; [Tune-y] 4: mmce.test.mean=0.0467; time: 8.0 min; memory: 135.2 Mb (+0.0)
+#&gt; [Tune-y] 4: mmce.test.mean=0.0467; time: 7.9 min; memory: 156Mb use, 447Mb max
 #&gt; [Tune-x] 5: minsplit=6; bw.feats=0.338
-#&gt; [Tune-y] 5: mmce.test.mean=0.0867; time: 8.0 min; memory: 135.2 Mb (+0.0)
+#&gt; [Tune-y] 5: mmce.test.mean=0.0867; time: 8.1 min; memory: 156Mb use, 447Mb max
 #&gt; [Tune-x] 6: minsplit=1; bw.feats=0.637
-#&gt; [Tune-y] 6: mmce.test.mean=0.0467; time: 8.0 min; memory: 135.2 Mb (+0.0)
+#&gt; [Tune-y] 6: mmce.test.mean=0.0467; time: 8.4 min; memory: 156Mb use, 447Mb max
 #&gt; [Tune-x] 7: minsplit=1; bw.feats=0.998
-#&gt; [Tune-y] 7: mmce.test.mean=0.0467; time: 8.0 min; memory: 135.2 Mb (+0.0)
+#&gt; [Tune-y] 7: mmce.test.mean=0.0467; time: 8.2 min; memory: 156Mb use, 447Mb max
 #&gt; [Tune-x] 8: minsplit=4; bw.feats=0.698
-#&gt; [Tune-y] 8: mmce.test.mean=0.0467; time: 7.9 min; memory: 135.2 Mb (+0.0)
+#&gt; [Tune-y] 8: mmce.test.mean=0.0467; time: 8.2 min; memory: 156Mb use, 447Mb max
 #&gt; [Tune-x] 9: minsplit=3; bw.feats=0.836
-#&gt; [Tune-y] 9: mmce.test.mean=0.0467; time: 8.3 min; memory: 135.2 Mb (+0.0)
+#&gt; [Tune-y] 9: mmce.test.mean=0.0467; time: 8.3 min; memory: 156Mb use, 447Mb max
 #&gt; [Tune-x] 10: minsplit=10; bw.feats=0.529
-#&gt; [Tune-y] 10: mmce.test.mean=0.0533; time: 8.7 min; memory: 135.3 Mb (+0.1)
+#&gt; [Tune-y] 10: mmce.test.mean=0.0533; time: 8.6 min; memory: 156Mb use, 447Mb max
 #&gt; [Tune] Result: minsplit=1; bw.feats=0.998 : mmce.test.mean=0.0467
 print(lrn)
 #&gt; Learner model for id=classif.rpart.bagged.tuned chain=TuneWrapper
