update tutorial with generateROCRCurves

--- a/tutorial/html/create_imputation/index.html
+++ b/tutorial/html/create_imputation/index.html
@@ -262,7 +262,7 @@ The <em>learn</em> and <em>impute</em> functions both have at least the followin
 #&gt;     makeImputeMethod(learn = function(data, target, col) mean(data[[col]], 
 #&gt;         na.rm = TRUE), impute = simpleImpute)
 #&gt; }
-#&gt; &lt;bytecode: 0x7fb955ad6388&gt;
+#&gt; &lt;bytecode: 0x7f9ed4e62430&gt;
 #&gt; &lt;environment: namespace:mlr&gt;
 mlr:::simpleImpute
 #&gt; function (data, target, col, const) 
@@ -276,7 +276,7 @@ mlr:::simpleImpute
 #&gt;     }
 #&gt;     replace(x, is.na(x), const)
 #&gt; }
-#&gt; &lt;bytecode: 0x7fb955005a38&gt;
+#&gt; &lt;bytecode: 0x7f9ee3fe2f58&gt;
 #&gt; &lt;environment: namespace:mlr&gt;
 </code></pre>
 
@@ -346,7 +346,7 @@ head(imp$data, 10)
 
         <!--
         MkDocs version  : 0.12.2
-        Docs Build Date : 2015-05-25 17:51:46.433230
+        Docs Build Date : 2015-06-03 01:07:30.060506
         -->
     </body>
 </html>
