--- a/tutorial/html/create_imputation/index.html
+++ b/tutorial/html/create_imputation/index.html
@@ -315,7 +315,7 @@ The <em>learn</em> and <em>impute</em> functions both have at least the followin
 #&gt;     makeImputeMethod(learn = function(data, target, col) mean(data[[col]], 
 #&gt;         na.rm = TRUE), impute = simpleImpute)
 #&gt; }
-#&gt; &lt;bytecode: 0x7fe493de7180&gt;
+#&gt; &lt;bytecode: 0x7ffe54c64df0&gt;
 #&gt; &lt;environment: namespace:mlr&gt;
 mlr:::simpleImpute
 #&gt; function (data, target, col, const) 
@@ -329,7 +329,7 @@ mlr:::simpleImpute
 #&gt;     }
 #&gt;     replace(x, is.na(x), const)
 #&gt; }
-#&gt; &lt;bytecode: 0x7fe495e6cc38&gt;
+#&gt; &lt;bytecode: 0x7ffe54bcc708&gt;
 #&gt; &lt;environment: namespace:mlr&gt;
 </code></pre>
 
