--- a/tutorial/html/filter_methods/index.html
+++ b/tutorial/html/filter_methods/index.html
@@ -339,6 +339,16 @@ numeric features.</p>
 <td align="center">X</td>
 </tr>
 <tr>
+<td align="left">cforest.importance</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/party/">party</a></td>
+<td align="left">Permutation importance of random forest fitted in package 'party'</td>
+<td align="center">X</td>
+<td align="center">X</td>
+<td align="center">X</td>
+<td align="center">X</td>
+<td align="center">X</td>
+</tr>
+<tr>
 <td align="left">chi.squared</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/FSelector/">FSelector</a></td>
 <td align="left">Chi-squared statistic of independence between feature and target</td>
