--- a/tutorial/html/learner/index.html
+++ b/tutorial/html/learner/index.html
@@ -390,7 +390,7 @@ classif.lrn$par.set
 #&gt; replace          logical    -  TRUE        -   -     -
 #&gt; classwt    numericvector &lt;NA&gt;     - 0 to Inf   -     -
 #&gt; cutoff     numericvector &lt;NA&gt;     -   0 to 1   -     -
-#&gt; sampsize         integer    -     - 1 to Inf   -     -
+#&gt; sampsize   integervector &lt;NA&gt;     - 0 to Inf   -     -
 #&gt; nodesize         integer    -     1 1 to Inf   -     -
 #&gt; maxnodes         integer    -     - 1 to Inf   -     -
 #&gt; importance       logical    - FALSE        -   -     -
@@ -425,7 +425,7 @@ getParamSet(classif.lrn)
 #&gt; replace          logical    -  TRUE        -   -     -
 #&gt; classwt    numericvector &lt;NA&gt;     - 0 to Inf   -     -
 #&gt; cutoff     numericvector &lt;NA&gt;     -   0 to 1   -     -
-#&gt; sampsize         integer    -     - 1 to Inf   -     -
+#&gt; sampsize   integervector &lt;NA&gt;     - 0 to Inf   -     -
 #&gt; nodesize         integer    -     1 1 to Inf   -     -
 #&gt; maxnodes         integer    -     - 1 to Inf   -     -
 #&gt; importance       logical    - FALSE        -   -     -
@@ -443,7 +443,7 @@ and defaults of a learning method without explicitly constructing it.</p>
 #&gt; replace          logical    -  TRUE        -   -     -
 #&gt; classwt    numericvector &lt;NA&gt;     - 0 to Inf   -     -
 #&gt; cutoff     numericvector &lt;NA&gt;     -   0 to 1   -     -
-#&gt; sampsize         integer    -     - 1 to Inf   -     -
+#&gt; sampsize   integervector &lt;NA&gt;     - 0 to Inf   -     -
 #&gt; nodesize         integer    -     1 1 to Inf   -     -
 #&gt; maxnodes         integer    -     - 1 to Inf   -     -
 #&gt; importance       logical    - FALSE        -   -     -
