--- a/tutorial/html/create_imputation/index.html
+++ b/tutorial/html/create_imputation/index.html
@@ -262,7 +262,7 @@ The <em>learn</em> and <em>impute</em> functions both have at least the followin
 #&gt;     makeImputeMethod(learn = function(data, target, col) mean(data[[col]], 
 #&gt;         na.rm = TRUE), impute = simpleImpute)
 #&gt; }
-#&gt; &lt;bytecode: 0x7faead926c30&gt;
+#&gt; &lt;bytecode: 0x7fbcf5af2ee0&gt;
 #&gt; &lt;environment: namespace:mlr&gt;
 mlr:::simpleImpute
 #&gt; function (data, target, col, const) 
@@ -276,7 +276,7 @@ mlr:::simpleImpute
 #&gt;     }
 #&gt;     replace(x, is.na(x), const)
 #&gt; }
-#&gt; &lt;bytecode: 0x7faeae3ba558&gt;
+#&gt; &lt;bytecode: 0x7fbcf5a48a60&gt;
 #&gt; &lt;environment: namespace:mlr&gt;
 </code></pre>
 
@@ -346,7 +346,7 @@ head(imp$data, 10)
 
         <!--
         MkDocs version  : 0.12.2
-        Docs Build Date : 2015-06-03 14:27:23.025027
+        Docs Build Date : 2015-06-15 16:54:28.029202
         -->
     </body>
 </html>
