--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>mlr tutorial</title>
+    <meta http-equiv="refresh" content="0; URL=http://mlr-org.github.io/mlr-tutorial/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
